新增多个模块，包括中间件，jwt续签等操作
