# routers/router.go
@@ -1,8 +1,8 @@
 package routers
 
 import (
-	"fmt"
 	v1 "gin-icqqg/api/v1"
+	"gin-icqqg/api/web"
 	"gin-icqqg/config"
 	"gin-icqqg/controller/index"
 	_ "gin-icqqg/docs"
@@ -11,7 +11,6 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"net/http"
-	"time"
 )
 
 func NewRouter() *gin.Engine {
@@ -24,34 +23,37 @@ func NewRouter() *gin.Engine {
 	r.GET("/api/v1/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	user := v1.User{}
 	news := v1.News{}
-	r.GET("/", func(context *gin.Context) {
-	loop:
-		for {
-			select {
-			case <-time.After(20 * time.Second):
-				fmt.Println("down")
-				goto loop
-			default:
-				time.Sleep(time.Second * 2)
-				fmt.Println("程序正在运行中")
-			}
-		}
-
-	})
-	r.GET("/api/v1/captcha", user.Captcha)
+	r.GET("/api/v1/captcha", v1.Captcha)
+	r.GET("/api/v1/table", v1.GetTable)
+	r.GET("/api/v1/table_info", v1.MyTable)
 	r.POST("/api/v1/user/login", user.Login)
 	r.POST("/api/v1/sendSms", v1.SendSms)
 	r.GET("/index.html", index.Index)
-	r.GET("/api/v1/get_token", v1.GetToken)
+
 	r.POST("/api/v1/user", user.AddUser)
 	r.GET("/api/v1/news/:id", news.GetNewsById)
+	r.DELETE("/api/v1/news/:id", news.DeleteNews)
 	r.POST("/api/v1/news", news.AddNews)
 	r.POST("/api/v1/upload", news.Upload)
 	apiv1 := r.Group("api/v1")
+	indexUser := &index.User{}
 	apiv1.Use(middleware.Jwt(), middleware.Logger())
 	{
-		apiv1.GET("/user/:id", user.GetUser)
-
+		apiv1.GET("/index/user", indexUser.GetUserInfo)
+		apiv1.POST("/user/update_avatar", user.UpdateAvatar)
+		apiv1.PUT("/user", user.UpdateUserInfo)
+		r.GET("/user/:id", user.GetUser)
 	}
+	webUser := web.NewWebUser()
+	adminLogin := web.NewAdminLogin()
+	r.POST("/api/web/user/login", adminLogin.Login)
+	admin := r.Group("api/web")
+	admin.Use(middleware.AdminJwt())
+	{
+		admin.POST("/user", webUser.AddUser)
+		admin.GET("/user", webUser.SelfInfo)
+		admin.GET("/user/logout", adminLogin.LogOut)
+	}
+
 	return r
 }
